--- a/frontend/web/minter-dapp/package.json
+++ b/frontend/web/minter-dapp/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "antd": "^4.20.7",
     "bootstrap": "^5.1.3",
     "moralis": "^1.8.0",
     "react": "^18.1.0",
