--- a/frontend/web/minter-dapp/package.json
+++ b/frontend/web/minter-dapp/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "moralis": "^1.8.0",
     "react": "^18.1.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-moralis": "^1.4.0",
