--- a/frontend/web/minter-dapp/package.json
+++ b/frontend/web/minter-dapp/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^4.20.7",
     "bootstrap": "^5.1.3",
     "moralis": "^1.8.0",
@@ -22,6 +23,8 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-moralis": "^1.4.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
