--- a/frontend/web/maxja-dapp/package.json
+++ b/frontend/web/maxja-dapp/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^4.21.0",
     "moralis": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
