--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
+    "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
