--- a/frontend/web/maxja-dapp/package.json
+++ b/frontend/web/maxja-dapp/package.json
@@ -20,6 +20,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-moralis": "^1.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
     "typescript": "^4.4.2",
