--- a/frontend/web/maxja-dapp/package.json
+++ b/frontend/web/maxja-dapp/package.json
@@ -23,6 +23,7 @@
     "react-moralis": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
     "sass": "^1.52.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
