--- a/frontend/web/maxja-dapp/package.json
+++ b/frontend/web/maxja-dapp/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@metamask/onboarding": "^1.0.1",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
