latest changes 0.1 USDC rate

--- a/frontend/web/maxja-dapp/package.json
+++ b/frontend/web/maxja-dapp/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.21.0",
+    "global": "^4.4.0",
     "moralis": "^1.8.0",
+    "moralis-admin-cli": "^2.1.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-moralis": "^1.4.0",
